--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1865,24 +1865,60 @@ LeadScreen As screen:
                         }
                     );
                     
-                    UpdateIf(
+                
+                 If(
+                        CountRows(
+                            Filter(
+                                TotalIncentives,
+                                TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarFPEstimateData.DateCreated))
+                            )
+                        ) < 1,
+                        Patch(
+                            TotalIncentives,
+                            Defaults(TotalIncentives),
+                            {
+                                ID: GUID(),
+                                TechnicianID: VarFPEstimateData.'Lead Generator Id',
+                                TotalproposedIncentives:  LookUp(
+                                TotalIncentives,
+                                TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarFPEstimateData.DateCreated)),
+                                TotalproposedIncentives
+                            ) + VarFPEstimateData.BidPrice * 0.02,
+                                TotalProposedLead:Value(
+                                LookUp(
+                                    TotalIncentives,
+                                    TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarFPEstimateData.DateCreated)),
+                                    TotalProposedLead
+                                )
+                            ) + 1,
+                                //TotalSoldIncentives: 0.00,
+                                //TotalSoldLead: 0,
+                                Year: Year(VarFPEstimateData.DateCreated),
+                                LeadYear: Year(VarFPEstimateData.DateCreated)
+                            }
+                        ),
+                        UpdateIf(
                         TotalIncentives,
-                        TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarleadYear)),
+                        TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarFPEstimateData.DateCreated)),
                         {
                             TotalproposedIncentives: LookUp(
                                 TotalIncentives,
-                                TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarleadYear)),
+                                TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarFPEstimateData.DateCreated)),
                                 TotalproposedIncentives
                             ) + VarFPEstimateData.BidPrice * 0.02,
                             TotalProposedLead: Value(
                                 LookUp(
                                     TotalIncentives,
-                                    TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarleadYear)),
+                                    TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarFPEstimateData.DateCreated)),
                                     TotalProposedLead
                                 )
                             ) + 1
                         }
                     );
+                    );
+                
+                
+                    
                     ,
                 //updating sold price and sold incentives
                 UpdateIf(
@@ -1898,6 +1934,38 @@ LeadScreen As screen:
                             SoldLeadDate:VarFPEstimateData.BookingDate
                         }
                     );
+                
+                
+                    If(
+                        CountRows(
+                            Filter(
+                                TotalIncentives,
+                                TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarFPEstimateData.BookingDate))
+                            )
+                        ) < 1,
+                        Patch(
+                            TotalIncentives,
+                            Defaults(TotalIncentives),
+                            {
+                                ID: GUID(),
+                                TechnicianID: VarFPEstimateData.'Lead Generator Id',
+                                TotalSoldIncentives:LookUp(
+                                TotalIncentives,
+                                TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarleadYear)),
+                                TotalSoldIncentives
+                            ) + VarFPEstimateData.BidPrice * 0.02,
+                                TotalSoldLead: Value(
+                                LookUp(
+                                    TotalIncentives,
+                                    TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarleadYear)),
+                                    TotalSoldLead
+                                )
+                            ) + 1,
+                                Year: Year(VarFPEstimateData.BookingDate),
+                                LeadYear: Year(VarFPEstimateData.BookingDate)
+                            }
+                        ),
+                
                     UpdateIf(
                         TotalIncentives,
                         TechnicianID = VarFPEstimateData.'Lead Generator Id' && Year = Text(Year(VarleadYear)),
@@ -1915,6 +1983,7 @@ LeadScreen As screen:
                                 )
                             ) + 1
                         }
+                    );
                     );
                    /* Notify(
                         "Proposed Incentives updated for the estimateId " & txtinptestimatenumber_1.Text,
