--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -138,6 +138,7 @@
     "LeadSummaryScreen",
     "SubmittedLeadScreen",
     "SubmittedLeadScreen_1",
+    "SubmittedLeadScreen_2",
     "ViewDetailsScreen",
     "ChatScreen",
     "Screen1"
